6 - Db context ve identity sınıfları oluşturuldu ve etkinleştirildi.

--- a/Identity/appsettings.json
+++ b/Identity/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=Identity.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
