--- a/Identity/Identity.csproj
+++ b/Identity/Identity.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1"/>
+    <PackageReference Include="NETCore.MailKit" Version="2.0.3"/>
   </ItemGroup>
 </Project>
