--- a/Identity/Identity.csproj
+++ b/Identity/Identity.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1"/>
     <PackageReference Include="NETCore.MailKit" Version="2.0.3"/>
+    <PackageReference Include="Mapster" Version="7.0.1"/>
   </ItemGroup>
 </Project>
